--- a/index2.html
+++ b/index2.html
@@ -84,12 +84,20 @@
     <div class="error"></div> -->
 
 
-
+<!-- 
     <input type="button" id="btnGenerate" value="University Name" onclick="collegeNameList()" />
     <hr />
     <select id="collegeName">
     </select>       
     
+</div> -->
+
+
+<div class='form-group'>
+    <input type="text" id='search'  class='form-control form-control-lg' placeholder="Your University / College" >
+
+</div>
+<div id="match-list"></div>
 </div>
 
 
